--- a/roles/elk_stack/vars/main.yml
+++ b/roles/elk_stack/vars/main.yml
@@ -19,7 +19,7 @@
 #replicas: 0
 #server_ip: localhost
 #shards: 1
-#template_dir: /etc/logstash/template
+#template_dir: /etc/logstash/templates
 
 #SSL SETTINGS
 #cert_ca_chain_name: "elk.csr"
