--- a/roles/elk_stack/tasks/configure_beats.yaml
+++ b/roles/elk_stack/tasks/configure_beats.yaml
@@ -35,12 +35,17 @@
     - elasticsearch
   when: ssl_on
 
+- name: configure_beats | Pause to Let the ElasticSearch Service Fully Start
+  pause:
+    minutes: 1
+  when: ssl_on
+
 - name: configure_beats | Load Filebeat Kibana Dashboard
-  command: /usr/bin/filebeat setup -e -E output.logstash.enabled=false -E output.elasticsearch.hosts=['{{ server_ip}}:{{ elastic_port}}'] -E setup.kibana.host={{ server_ip }}:{{ kibana_port }}
+  command: "/usr/bin/filebeat setup -e -E output.logstash.enabled=false -E output.elasticsearch.hosts=['{{ server_ip}}:{{ elastic_port}}'] -E setup.kibana.host={{ server_ip }}:{{ kibana_port }}"
   changed_when: false
 
 - name: configure_beats | Load Auditbeat Kibana Dashboard
-  command: /usr/bin/auditbeat setup -e -E output.logstash.enabled=false -E output.elasticsearch.hosts=['{{ server_ip}}:{{ elastic_port}}'] -E setup.kibana.host={{ server_ip }}:{{ kibana_port }}
+  command: "/usr/bin/auditbeat setup -e -E output.logstash.enabled=false -E output.elasticsearch.hosts=['{{ server_ip}}:{{ elastic_port}}'] -E setup.kibana.host={{ server_ip }}:{{ kibana_port }}"
   changed_when: false
 
 - name: configure_beats | Swap Back to HTTPS (if SSL True)
